# FIESTA

./: .gitignore  .readthedocs.yaml  README.md  clean.sh  pyproject.toml  requirements.txt  setup.py  vcon.py
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst  requirements.txt  usage.rst
fiesta/: __init__.py
fiesta/boundary/: __init__.py  buffer2d.py  buffer3d.py  mpi_periodic.py  mpi_randoms.py  periodic.py  randoms.py
fiesta/coords/: __init__.py  mpi_points.py
fiesta/dtfe/: OLDdtfethickslice.py  OLDseries_dtfe3d.py  OLDseries_dtfethickslice.py  __init__.py  dtfe2d.py  dtfe3d.py  dtfe4grid.py  mpi_dtfe4grid.py  series_dtfe2d.py
fiesta/interp/: __init__.py  bilinear.py  trilinear.py
fiesta/kdtree/: kdtree1d.py  kdtree2d.py
fiesta/maths/: __init__.py  diff.py  mpi_diff.py
fiesta/p2g/: OLD_grid.py  OLD_mpi_grid.py  __init__.py  deconvol.py  mpi_part2grid.py  part2grid.py
fiesta/randoms/: cartesian.py
fiesta/sph/: kernels.py  sph3d.py
fiesta/src/: __init__.py  bilinear.f90  bilinear.py  delaunay2d.f90  delaunay2d.py  delaunay3d.f90  delaunay3d.py  grid.f90  grid.py  matrix.f90  matrix.py  part2grid_2d.f90  part2grid_2d.py  part2grid_3d.f90  part2grid_3d.py  part2grid_pix.f90  part2grid_pix.py  part2grid_wei.f90  part2grid_wei.py  polygon.f90  polygon.py  polyhedron.f90  polyhedron.py  trilinear.py  voronoi2d.f90
fiesta/srcpy/: differentiate.py  voronoi2d.py  voronoi3d.py
fiesta/utils/: complex.py  lists.py
fiesta/vefe/: __init__.py  integral_image.py  volume_enclosing_2d.py
fiesta/voronoi/: series_voronoi3d.py  voronoi2d.py  voronoi3d.py  voronoithickslice.py
fiesta_pkg.egg-info/: PKG-INFO  SOURCES.txt
python/: setup.py
python/fiesta/: __init__.py
python/fiesta/boundary/: __init__.py  buffer2d.py  buffer3d.py
python/fiesta/coords/: __init__.py  cartesian.py
python/fiesta/dtfe/: __init__.py  dtfe2d.py  dtfe3d.py  dtfethickslice.py
python/fiesta/grid/: __init__.py  _part2grid.f90  deconvol.py  grid.py  part2grid.py
python/fiesta/interp/: _bilinear.f90  _trilinear.f90  bilinear.py  trilinear.py
python/fiesta/kdtree/: __init__.py  kdtree2d.py  kdtree3d.py
python/fiesta/randoms/: __init__.py
python/fiesta/sph/: __init__.py  sph1d.py  sph2d.py
python/fiesta/src/: __init__.py  bilinear.f90  delaunay2d.f90  delaunay3d.f90  differentiate.f90  grid.f90  matrix.f90  part2grid2d.f90  part2grid3d.f90  part2grid_3d.f90  (+4 more)
(+8 files in other folders)
