[build-system]
requires = ["setuptools>61.0.0", "wheel", "numpy>=1.22,<1.27"]
build-backend = "setuptools.build_meta"

[project]
name = "fiesta"
description = "FiEsta is a python library for general interpolation of field values from uniform and non-uniform input points."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Krishna Naidoo", email = "krishna.naidoo.11@ucl.ac.uk"}]
maintainers = [{name = "Krishna Naidoo", email = "krishna.naidoo.11@ucl.ac.uk"}]
keywords = ["astronomy", "interpolation", "mathematics", "simulations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Interpolation",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Simulations",
]
dependencies = [
    "numba",
    "numpy",
    "scipy",
    "SHIFT @ git+https://github.com/knaidoo29/SHIFT.git"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/knaidoo29/FIESTA"
Repository = "https://github.com/knaidoo29/FIESTA"
Documentation = "https://fiesta-docs.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/knaidoo29/FIESTA/issues"
Changelog = "https://github.com/knaidoo29/FIESTA/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["black", "flake8", "ipython", "jupyter", "mypy"]
docs = ["numpydoc", "sphinx", "sphinx-rtd-theme"]
test = [
    "nose",
    "pytest>=6.0",
    "pytest-cov"
]

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["build", "docs", "tests", "tutorials"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
skysegmentor = ["*.json", "*.md", "*.txt"]

# [tool.pytest.ini_options]
# addopts = "-ra -q --cov=fiesta --cov-report=term-missing"
# python_files = "test_*.py"
# testpaths = ["tests"]
